fix table spacing

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -173,6 +173,7 @@ select {
 
 .nypl-basic-table {
   margin-top: 20px;
+  width: 100%;
 
   thead {
     text-align: left;
@@ -181,10 +182,13 @@ select {
   th, td {
     overflow: inherit;
     padding-right: 15px;
-    width: 16%;
+    width: 15%;
 
     &:last-of-type {
       padding-right: 0;
+    }
+    &:first-of-type {
+      width: 30%
     }
   }
 
